feat(projects): 增加 addShoppingCart.js
