# src/controllers/order/index.js
@@ -1,0 +1,12 @@
+// src/controllers/order/index.js
+
+const addShoppingCart = require('./addShoppingCart');
+
+module.exports = {
+    '/addShoppingCart': {
+        method: 'post',
+        handler: addShoppingCart.addShoppingCart
+    },
+
+
+};
